<resources>
    <string name="app_name">CSCI571HW9</string>
    <string name="app_name_space">com.example.aienanc.csci571hw9</string>
    <string name="aeris_client_id">7Jzrerx6bXqMwDGUYQlxz</string>
    <string name="aeris_client_secret">R8w8CGIN8BZIepghSzmT8sUW1Gbb5j1zQpWPd1ob</string>
    <string name="facebook_app_id">1647844528804340</string>
    <string name="google_maps_key">AIzaSyA8OmaeqmD_qWz7sKzF1kAamIwO9szOmwo</string>
    <string name="action_settings">Settings</string>
    <string-array name="state_arr">
        <item>Select</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District Of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string name="degree1">Fahrenheit</string>
    <string name="degree2">Celsius</string>
    <string name="button1">SEARCH</string>
    <string name="button2">CLEAR</string>
    <string name="button3">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="toolbar_title">WeatherApp</string>
    <string name="myName">Name: Innyoung Hur</string>
    <string name="myId">Student Id: 2328933738</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_map">MapActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
